update carto zoom et pin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -405,4 +405,7 @@ text-align:center;
     padding: 0.1rem 1rem 1rem;
     max-width: 992px;
     }
+.gm-control-active{
+  border: 3px solid var(--background-action-high-blue-france) !important;
+}
 //.fr-badge remove z-index dans dsfr
