--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,13 +53,34 @@
                         <%= active_link_to root_path, class: "fr-nav__link", target: "_self",:active => [['home'], ['index']] do%>Accueil<%end%>
                     </li>
                     <li class="fr-nav__item">
-                        <%= active_link_to cartographie_performance_path, class: "fr-nav__link", target: "_self" do%>Cartographie de la performance globale<%end%>
+                        
+                    </li>
+              
+                    <li class="fr-nav__item">
+                        <button class="fr-nav__btn" aria-expanded="false" aria-controls="menu-774">Perfomance globale</button>
+                        <div class="fr-collapse fr-menu" id="menu-774">
+                            <ul class="fr-menu__list">
+                                <li>
+                                    <%= active_link_to cartographie_performance_path, class: "fr-nav__link", target: "_self" do%>Cartographie de la performance globale<%end%>
+                                </li>
+                                <li>
+                                    <%= active_link_to suivi_temporel_performance_path, class:"fr-nav__link", target:"_self" do%>Suivi temporel de la performance globale <%end%>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="fr-nav__item">
-                        <%= active_link_to cartographie_indicateur_path, class:"fr-nav__link", target:"_self" do%>Cartographie par indicateur<%end%>
-                    </li>
-                    <li class="fr-nav__item">
-                        <%= active_link_to indicateur_executions_path, class:"fr-nav__link", target:"_self",:active => [['api/v1/indicateur_executions'], ['show']] do %>Suivi temporel des indicateurs<%end%>
+                        <button class="fr-nav__btn" aria-expanded="false" aria-controls="menu-775">Perfomance par indicateur</button>
+                        <div class="fr-collapse fr-menu" id="menu-775">
+                            <ul class="fr-menu__list">
+                                <li>
+                                    <%= active_link_to cartographie_indicateur_path, class:"fr-nav__link", target:"_self" do%>Cartographie par indicateur<%end%>
+                                </li>
+                                <li>
+                                    <%= active_link_to suivi_temporel_indicateur_path, class:"fr-nav__link", target:"_self",:active => [['api/v1/indicateur_executions'], ['show']] do %>Suivi temporel des indicateurs<%end%>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="fr-nav__item">
                         <button class="fr-nav__btn" aria-expanded="false" aria-controls="menu-776">Informations</button>
