--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <div class="fr-header__service">
-                        <%= active_link_to root_path, target: "_self", title:"Accueil - SIMULAE" do%>
+                        <%= active_link_to root_path, target: "_self", title:"Accueil - SIMP3" do%>
                           <p class="fr-header__service-title">SIMP3 <span class="fr-badge fr-badge--sm fr-badge--green-emeraude">BÊTA</span></p>
                         <%end%>
                         <p class="fr-header__service-tagline">Suivi des indicateurs MP3</p>
