--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -451,4 +451,7 @@ border-color:transparent;
   mask-image: image-url("record-circle-fill.svg") !important;
   background-image: image-url("record-circle-fill.svg") !important;
 }
+.fr-button-legend{
+  padding: 0px !important;
+}
 //.fr-badge remove z-index dans dsfr
