--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
                             </li>  
                             <% end %>
                             <li class="fr-shortcuts__item">
-                                <a class="fr-btn fr-fi-logout-box-r-line" data-method="delete" href="/logout">Se déconnecter</a>
+                                <a class="fr-btn fr-fi-logout-box-r-line" data-method="delete" href="/simp3/logout">Se déconnecter</a>
                             </li>  
                         </ul>
                     </div>
